--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             <p name="number" id="3" class="calc_items-style">3</p>
             <p name="operator" id="+" class="calc_items-style" style="color: #ff7113;">+</p>
             <p name="number" id="0" class="calc_items-style">0</p>
+            <p name="operator" id="(" class="calc_items-style" style="color: white;">(</p>
+            <p name="operator" id=")" class="calc_items-style" style="color: white;">)</p>
             <p name="operator" id="=" class="calc_items-style" style="color: white; background-color: #ff7113;">=</p>
         </div>
     </div>
